<resources>
    <string name="app_name">Dine@CU</string>
    <string name="title_activity_opening">Opening</string>
    <string name="Ferris"> Ferris Booth </string>
    <string name="John_Jay"> John Jay </string>
    <string name="JJs"> JJ\'s Place </string>
    <string name="cooking"> What\'s cooking? </string>
    <string name="time"> What time? </string>
    <string name="location"> Dining Hall </string>
    <string name="message"> Message </string>
    <string name="contacts"> Select Friends </string>
    <string name="invite"> Invite Friends </string>
    <string name="meeting_message"> Your message here </string>
    <string name="title_activity_livepage">Ferris</string>
    <string name="parse_html"> </string>
    <string name="html_button">Get Menu Items</string>
    <string name="hello">ImageView from URL</string>
    <string name="about">For the detailed process information, including CPU usage, memory usage and battery usage</string>
    <string name="setting">Setting</string>
    <string name="information">Information</string>
    <string name="energy">Energy </string>
    <string name="process"> Process Details </string>
    <string-array name="dininghalls">
        <item>Ferris Booth </item>
        <item>John Jay </item>
        <item>JJs </item>

    </string-array>
</resources>
