<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_dining__halls"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.fredrick_tam.dinecu.Dining_Halls">


    <android.support.design.widget.BottomNavigationView
        android:id="@+id/bottom_navigation"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:itemBackground="@color/dining"
        android:layout_alignParentBottom="true"
        app:itemIconTint="@color/white"
        android:paddingBottom="0dp"
        android:layout_weight=".90"
        android:scaleType="fitXY"
        app:itemTextColor="@color/white"
        app:menu="@menu/bottom_navigation_main" />

    <Button
        android:text="@string/Ferris"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="36dp"
        android:id="@+id/button"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true"
        android:background="@drawable/custom_button"/>

    <Button
        android:text="@string/John_Jay"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:id="@+id/button2"
        android:background="@drawable/custom_button"
        android:layout_below="@+id/button"
        android:layout_alignParentStart="true" />

    <Button
        android:text="@string/JJs"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="56dp"
        android:id="@+id/button3"
        android:background="@drawable/custom_button"
        android:layout_below="@+id/button2"
        android:layout_alignParentStart="true" />

    <ImageView
        android:layout_width="200dp"
        android:layout_height="300dp"
        app:srcCompat="@drawable/diningplan"
        android:id="@+id/imageView5"
        android:layout_alignParentEnd="true" />

</RelativeLayout>
